--- a/items.html
+++ b/items.html
@@ -139,6 +139,7 @@
     // ALL ITEMS FROM ALL SHOPS
     const shopData = {
       "Chat Point": [
+         { name: "Nuggets", price: 88, image: "Nuggets.jpg" },
         { name: "Akoo tikki(burger)+ onion pizza + cheese sandwich + fry momos", price: 300, image: "Aloo-Tikki-Burger.jpg" },
         { name: "Veg roll + paneer puff + veg sandwich + Paneer burger + 750ml water bottel", price: 229, image: "Paneer-Burger.jpg" },
         { name: "2 cake roll + chocolate bun + honey cake (1p) + 2 egg/veg puff + 250 coca cola ", price: 145, image: "combo.JPG" },
