--- a/items.html
+++ b/items.html
@@ -176,30 +176,30 @@
       "Pizza Spot": [
         { name: "Nuggets", price: 85, image: "Nuggets.jpg" },
         { name: "French Fries", price: 95, image: "French-Fries.jpg" },
-        { name: "Masala Fries", price: 105, image: "Masala-Fries.jpg" },
-        { name: "Smiley Fries", price: 105, image: "Smiley-Fries.jpg" },
-        { name: "Pizza Spot Special", price: 355, image: "Pizza-Spot-Special.jpg" },
+        { name: "Masala Fries", price: 110, image: "Masala-Fries.jpg" },
+        { name: "Smiley Fries", price: 110, image: "Smiley-Fries.jpg" },
+        { name: "Pizza Spot Special (Fries)", price: 355, image: "Masala-Fries.jpg" },
         { name: "Burger Classic", price: 85, image: "Burger-Classic.jpg" },
         { name: "Aloo Tikki Burger", price: 85, image: "Aloo-Tikki-Burger.jpg" },
         { name: "Paneer Burger", price: 95, image: "Paneer-Burger.jpg" },
-        { name: "Double Decker Burger", price: 125, image: "Double-Decker-Burger.jpg" },
+        { name: "Double Decker Burger", price: 129, image: "Double-Decker-Burger.jpg" },
         { name: "Pizza Spot Special Burger", price: 355, image: "Pizza-Spot-Special-Burger.jpg" },
         { name: "Margherita", price: 164, image: "Margherita.jpg" },
-        { name: "Veggie", price: 177, image: "Veggie.jpg" },
-        { name: "Veggie Lover", price: 274, image: "Veggie-Lover.jpg" },
-        { name: "Sweet Corn", price: 245, image: "Sweet-Corn.jpg" },
-        { name: "Baby Corn", price: 235, image: "Baby-Corn.jpg" },
-        { name: "Tandoori Paneer", price: 235, image: "Tandoori-Paneer.jpg" },
-        { name: "Steam Momos", price: 75, image: "Steam-Momos.jpg" },
+        { name: "Veggie", price: 187, image: "Veggie.jpg" },
+        { name: "Veggie Lover", price: 284, image: "Veggie-Lover.jpg" },
+        { name: "Sweet Corn", price: 249, image: "Sweet-Corn.jpg" },
+        { name: "Baby Corn", price: 239, image: "Baby-Corn.jpg" },
+        { name: "Tandoori Paneer", price: 239, image: "Tandoori-Paneer.jpg" },
+        { name: "Steam Momos 2 plates", price: 155, image: "Steam-Momos.jpg" },
         { name: "Fried Momos", price: 85, image: "Fried-Momos.jpg" },
-        { name: "Kurkure Momos", price: 105, image: "Kurkure-Momos.jpg" },
+        { name: "Kurkure Momos", price: 113, image: "Kurkure-Momos.jpg" },
         { name: "Veg Sandwich", price: 75, image: "Veg-Sandwich.jpg" },
         { name: "Cheese Sandwich", price: 85, image: "Cheese-Sandwich.jpg" },
         { name: "Sweet Corn Sandwich", price: 85, image: "Sweet-Corn-Sandwich.jpg" },
         { name: "Paneer Tandoori Sandwich", price: 95, image: "Paneer-Tandoori-Sandwich.jpg" },
-        { name: "Club Sandwich", price: 125, image: "Club-Sandwich.jpg" },
-        { name: "Pizza Spot Special Sandwich", price: 145, image: "Pizza-Spot-Special-Sandwich.jpg" },
-        { name: "Pav Bhaji", price: 67, image: "Pav-Bhaji.jpg" },
+        { name: "Club Sandwich", price: 129, image: "Club-Sandwich.jpg" },
+        { name: "Pizza Spot Special Sandwich", price: 149, image: "Pizza-Spot-Special-Sandwich.jpg" },
+        { name: "Pav Bhaji", price: 63, image: "Pav-Bhaji.jpg" },
         { name: "Cheese Pav Bhaji", price: 87, image: "Cheese-Pav-Bhaji.jpg" },
         { name: "Veg Roll", price: 77, image: "Veg-Roll.jpg" },
         { name: "Sweet Corn Roll", price: 97, image: "Sweet-Corn-Roll.jpg" },
