--- a/items.html
+++ b/items.html
@@ -173,38 +173,47 @@
         { name: "Cheese Dosa", price: 75, image: "chess-dosa.jpg" },
         { name: "Chou Chou Bath", price: 70, image: "chou-chou-bath.JPG" }
       ],
-      "Pizza Spot": [
-        { name: "Nuggets", price: 85, image: "Nuggets.jpg" },
-        { name: "French Fries", price: 95, image: "French-Fries.jpg" },
-        { name: "Masala Fries", price: 115, image: "Masala-Fries.jpg" },
-        { name: "Smiley Fries", price: 115, image: "Smiley-Fries.jpg" },
-        { name: "Pizza Spot Special (Fries)", price: 175, image: "Masala-Fries.jpg" },
-        { name: "Burger Classic", price: 85, image: "Burger-Classic.jpg" },
-        { name: "Aloo Tikki Burger", price: 85, image: "Aloo-Tikki-Burger.jpg" },
-        { name: "Paneer Burger", price: 95, image: "Paneer-Burger.jpg" },
-        { name: "Double Decker Burger", price: 129, image: "Double-Decker-Burger.jpg" },
-        { name: "Pizza Spot Special Burger", price: 355, image: "Pizza-Spot-Special-Burger.jpg" },
-        { name: "Margherita", price: 164, image: "Margherita.jpg" },
-        { name: "Veggie", price: 187, image: "Veggie.jpg" },
-        { name: "Veggie Lover", price: 284, image: "Veggie-Lover.jpg" },
-        { name: "Sweet Corn", price: 249, image: "Sweet-Corn.jpg" },
-        { name: "Baby Corn", price: 239, image: "Baby-Corn.jpg" },
-        { name: "Tandoori Paneer", price: 239, image: "Tandoori-Paneer.jpg" },
-        { name: "Steam Momos 2 plates", price: 155, image: "Steam-Momos.jpg" },
-        { name: "Fried Momos", price: 85, image: "Fried-Momos.jpg" },
-        { name: "Kurkure Momos", price: 113, image: "Kurkure-Momos.jpg" },
-        { name: "Veg Sandwich", price: 75, image: "Veg-Sandwich.jpg" },
-        { name: "Cheese Sandwich", price: 85, image: "Cheese-Sandwich.jpg" },
-        { name: "Sweet Corn Sandwich", price: 85, image: "Sweet-Corn-Sandwich.jpg" },
-        { name: "Paneer Tandoori Sandwich", price: 95, image: "Paneer-Tandoori-Sandwich.jpg" },
-        { name: "Club Sandwich", price: 135, image: "Club-Sandwich.jpg" },
-        { name: "Pizza Spot Special Sandwich", price: 155, image: "Pizza-Spot-Special-Sandwich.jpg" },
-        { name: "Pav Bhaji", price: 63, image: "Pav-Bhaji.jpg" },
-        { name: "Cheese Pav Bhaji", price: 87, image: "Cheese-Pav-Bhaji.jpg" },
-        { name: "Veg Roll", price: 77, image: "Veg-Roll.jpg" },
-        { name: "Sweet Corn Roll", price: 97, image: "Sweet-Corn-Roll.jpg" },
-        { name: "Paneer Roll", price: 115, image: "Paneer-Roll.jpg" }
-      ],
+     "Pizza Spot": [
+  { name: "Nuggets", price: 76, image: "Nuggets.jpg" },                    // 60 ≤99 → +16 =76
+  { name: "French Fries", price: 86, image: "French-Fries.jpg" },          // 70 ≤99 → +16 =86
+  { name: "Photo Fries", price: 86, image: "French-Fries.jpg" },           // 70 ≤99 → +16 =86
+  { name: "Masala Fries", price: 96, image: "Masala-Fries.jpg" },          // 80 ≤99 → +16 =96
+  { name: "Smily Fash", price: 96, image: "Smiley-Fries.jpg" },            // 80 ≤99 → +16 =96
+  { name: "Pizza Spot (SPL)", price: 165, image: "Masala-Fries.jpg" }, // 140 ≥100 → +25 =165
+
+  { name: "Burger Classic", price: 76, image: "Burger-Classic.jpg" },      // 60 ≤99 → +16 =76
+  { name: "Aloo Tikki", price: 76, image: "Aloo-Tikki-Burger.jpg" },       // 60 ≤99 → +16 =76
+  { name: "Paneer", price: 96, image: "Paneer-Burger.jpg" },               // 80 ≤99 → +16 =96
+  { name: "Double Decker", price: 125, image: "Double-Decker-Burger.jpg" }, // 100 ≥100 → +25 =125
+  { name: "Pizza Spot (SPL)", price: 165, image: "Pizza-Spot-Special-Burger.jpg" }, // 140 ≥100 → +25 =165
+
+  { name: "Veg. Sandwich", price: 66, image: "Veg-Sandwich.jpg" },         // 50 ≤99 → +16 =66
+  { name: "Cheese", price: 76, image: "Cheese-Sandwich.jpg" },             // 60 ≤99 → +16 =76
+  { name: "Sweet Corn", price: 76, image: "Sweet-Corn-Sandwich.jpg" },     // 60 ≤99 → +16 =76
+  { name: "Mushroom", price: 76, image: "Mushroom-Sandwich.jpg" },         // 60 ≤99 → +16 =76
+  { name: "Paneer", price: 86, image: "Paneer-Tandoori-Sandwich.jpg" },    // 70 ≤99 → +16 =86
+  { name: "Club Sandwich", price: 125, image: "Club-Sandwich.jpg" },       // 100 ≥100 → +25 =125
+  { name: "Pizza Spot (SPL)", price: 145, image: "Pizza-Spot-Special-Sandwich.jpg" }, // 120 ≥100 → +25 =145
+
+  { name: "Margherita", price: 154, image: "Margherita.jpg" },             // 129 ≥100 → +25 =154
+  { name: "Veggie", price: 174, image: "Veggie.jpg" },                     // 149 ≥100 → +25 =174
+  { name: "Vag Lover", price: 274, image: "Veggie-Lover.jpg" },            // 249 ≥100 → +25 =274
+  { name: "Sweet Corn", price: 244, image: "Sweet-Corn.jpg" },             // 219 ≥100 → +25 =244
+  { name: "Baby Corn", price: 224, image: "Baby-Corn.jpg" },               // 199 ≥100 → +25 =224
+  { name: "Tandoori Paneer", price: 235, image: "Tandoori-Paneer.jpg" },   // 210 ≥100 → +25 =235
+  { name: "Pizza Spot (SPL)", price: 324, image: "Pizza-Spot-Special.jpg" }, // 299 ≥100 → +25 =324
+
+  { name: "Steam momos 2 plates ", price: 139, image: "Steam-Momos.jpg" },                  // 50 ≤99 → +16 =66
+  { name: "Fyr momos", price: 76, image: "Fried-Momos.jpg" },                    // 60 ≤99 → +16 =76
+  { name: "Kurkure momos", price: 96, image: "Kurkure-Momos.jpg" },              // 80 ≤99 → +16 =96
+
+  { name: "Pav Bhaji", price: 56, image: "Pav-Bhaji.jpg" },                // 40 ≤99 → +16 =56
+  { name: "Cheese Pav Bhaji", price: 76, image: "Cheese-Pav-Bhaji.jpg" },  // 60 ≤99 → +16 =76
+
+  { name: "Veg Rool", price: 66, image: "Veg-Roll.jpg" },                  // 50 ≤99 → +16 =66
+  { name: "Sweet Corn", price: 86, image: "Sweet-Corn-Roll.jpg" },         // 70 ≤99 → +16 =86
+  { name: "Paneer Roll", price: 96, image: "Paneer-Roll.jpg" }             // 80 ≤99 → +16 =96
+],
       "connect with pizza": [
         { name: "Margharita pizza", price: 155, image: "Margherita.jpg" },
         { name: "Corn cheese", price: 179, image: "Sweet-Corn.jpg" },
